Fully Responsive Result Calculator

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Percentage Software</title>
+    <title>Fully Responsive Result Calculator</title>
 </head>
 
 <body>
@@ -57,7 +57,7 @@
                     id="j">
                 <br>
                 <br>
-                <button value="submit" id="btn" onclick="grade(); {return false};">Calculate</button>
+                <button value="submit" id="btn">Calculate</button>
             </form>
         </div>
         <div class="result">
